--- a/Commons/Commons.csproj
+++ b/Commons/Commons.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="FileReader\Factory\" />
+    <Folder Include="DataConverter\Factory\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
