--- a/Commons/Commons.csproj
+++ b/Commons/Commons.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Csv" Version="2.0.84" />
+    <PackageReference Include="CsvHelper" Version="28.0.1" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
@@ -21,8 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataConverter\Factory\" />
-    <Folder Include="DataConverter\ConverterJsonModel\" />
+    <Folder Include="DataUtil\Factory\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
