--- a/Commons/Commons.csproj
+++ b/Commons/Commons.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Csv" Version="2.0.84" />
     <PackageReference Include="CsvHelper" Version="28.0.1" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17">
