--- a/CommonsNUnitTest/CommonsNUnitTest.csproj
+++ b/CommonsNUnitTest/CommonsNUnitTest.csproj
@@ -25,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="CsvHelper" Version="28.0.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.45" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
